# SG

./: SG.cabal  stack.yaml
Data/: SG.hs
Data/SG/: Geometry.hs  Matrix.hs  Shape.hs  Test.hs  Vector.hs
Data/SG/Geometry/: ThreeDim.hs  TwoDim.hs
Data/SG/Vector/: Basic.hs
