name:                SG
version:             2.0
synopsis:            Small geometry library for dealing with vectors and collision detection
license:             BSD3
license-file:        LICENSE
author:              Neil Brown
maintainer:          sandy@sandymaguire.me
copyright:           Copyright (c) 2009 Neil Brown, Copyright (c) 2016 Sandy Maguire
stability:           Provisional
description:         A small geometry library for dealing with
                     vectors, points, lines, simple shapes, and their
                     various intersection tests.  See also the SGdemo project
                     (<http://hackage.haskell.org/cgi-bin/hackage-scripts/package/SGdemo>)
                     for an example of using the module.
tested-with:         GHC==7.10.2
build-type:          Simple
category:            Data, Math
cabal-version:       >=1.10
extra-source-files:  Data/SG/Test.hs


Library
  build-depends:     base >=4.8 && <4.10, mtl
  default-language: Haskell2010
  exposed-modules:   Data.SG
                     Data.SG.Geometry
                     Data.SG.Geometry.TwoDim
                     Data.SG.Geometry.ThreeDim
                     Data.SG.Matrix
                     Data.SG.Shape
                     Data.SG.Vector
                     Data.SG.Vector.Basic
  ghc-options:       -Wall
  extensions:        MultiParamTypeClasses FlexibleInstances FunctionalDependencies
                     ScopedTypeVariables FlexibleContexts
